<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C-Learner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="title_section1">C-Learner</string>
    <string name="title_section2">About us</string>
    <string name="title_section3">UserProfile</string>
    <string name="title_section4">Ask Questions</string>
    <string name="title_section5">The Compiler</string>
    <string name="title_section6">Tips and Tricks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_theory">Theory</string>
    <string name="share">Share</string>
    <string name="title_activity_keyword">Keywords</string>
    <string name="title_activity_mapactivity">Map</string>
    <string name="title_activity_Nik">Nik</string>
    <string name="Title_keyword">KeywordActivity</string>
    <string name="pro_name">Programmes</string>
    <string name="market">market address</string>
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>

    <string name="title_activity_compiler">Compiler</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_program_list">ProgramList</string>
    <string name="title_activity_programe_show">ProgrameShow</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_ask_question">AskQuestion</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_project_show">ProjectShow</string>
    <string name="title_activity_tips_and_tricks">TipsAndTricks</string>
    <string name="title_activity_about_author">AboutAuthor</string>
    <string name="admob_id">pub-3748442571221151</string>
    <string name="title_activity_splash">Splash</string>
    <string name="menu_settings">Settings</string>
    <string name="user_name">Email</string>
    <string name="user_password">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="sign_up_txt">Register Here</string>
    <string name="name">Enter the name</string>
    <string name="email_enter">Enter the email</string>
    <string name="phone_enter">Enter the phone</string>
    <string name="new_user">New to C-Learner ? Need to Sign UP</string>
    <string name="author">C-Learner by Tarun Sharma\n conquer the world</string>
    <string name="login_text">Login with C-Learner Credentials</string>
    <string name="sign_up_text">Register with C-Learner Credentials</string>
    <string name="description">Application is about C language.\nLanguage! Which changed the world.</string>
	<string name="howtouse">We tried to make it simple.\n 1.Take any topic from theory and get the base.\n2.Use Interview and MCQ to brush your skills.\n3.Keywords and programs provide a method to think in C language.\n4 Want to GO further\n Check PROJECT, TUTORIALS </string>
</resources>
