<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/theme"
    android:layout_height="match_parent" >
   
    <RelativeLayout
        android:id="@+id/superlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_text"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/textViewname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView_login"
                        android:layout_marginTop="20dp"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:ems="20"
                        android:padding="5dp"
                        android:background="@drawable/field"
                        android:imeOptions="actionNext"
                        android:nextFocusUp="@+id/password"
                        android:layout_below="@+id/textViewname"
                        android:inputType="text" >

                    </EditText>
                    
                    <TextView
                        android:id="@+id/textViewusername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_name"
                        android:layout_marginTop="20dp"
                        android:text="@string/email_enter"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:ems="20"
                        android:padding="5dp"
                        android:background="@drawable/field"
                        android:imeOptions="actionNext"
                        android:nextFocusUp="@+id/password"
                        android:layout_below="@+id/textViewusername"
                        android:inputType="textEmailAddress" >

                    </EditText>
                    
                    
                    <TextView
                        android:id="@+id/textViewuserphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_email"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone_enter"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/edit_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:ems="20"
                        android:background="@drawable/field"
                        android:imeOptions="actionNext"
                        android:nextFocusUp="@+id/password"
                        android:layout_below="@+id/textViewuserphone"
                        android:inputType="textEmailAddress" >

                    </EditText>
                      <TextView
                        android:id="@+id/textViewpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_mobile"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_password"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:ems="20"
                        android:padding="5dp"
                        android:background="@drawable/field"
                        android:layout_below="@+id/textViewpassword"
                        android:inputType="textPassword" >

                    </EditText>

                    <Button
                        android:id="@+id/Signup_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/White"
                        android:layout_below="@+id/password"
                        android:background="@drawable/suggestoin_state"
                        android:text="@string/sign_up_txt" />

                    <TextView
                        android:id="@+id/textView_author_description"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/Signup_btn"
                        android:text="@string/author"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>
